# libmaelcum

./: Makefile.am  README.md  configure.ac  libmaelcum.pc.in
examples/: Makefile.am  example.c
maelcum/: Makefile.am  cloudfront_strings.h  maelcum.c  maelcum.h
src/: Makefile.am  libmaelcum.c  libmaelcum.h
